--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 </head>
 <body>
@@ -34,9 +35,11 @@
                         <div class="carousel-item">
                             <img th:src="@{'/uploadImg/'+${product.productSubImg3}}" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item">
-                            <img th:src="@{'/uploadImg/'+${product.productSubImg4}}" class="d-block w-100" alt="...">
-                        </div>
+
+                        <input type="hidden" id="productName" th:value="${product.productName}">
+                        <input type="hidden" id="productNo" th:value="${product.productNo}">
+
+
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -56,6 +59,8 @@
                             href="" th:value="${product.productNo}" th:text="${product.sellerName}"></a>
                     </p><span class="production-selling-header__title__name" th:value="${product.productName}"
                               th:text="${product.productName}"></span>
+
+
                     </h1>
                     <h4><span class="production-selling-header__price__original"
                               th:text="${product.customerPrice}"></span></h4>
@@ -76,12 +81,169 @@
                     <div>
                         <label>수량</label><input th:type="text" th:class="input-qty"/>
                     </div>
-                    <button type="submit" class="btn-basket">장바구</button>
+                    <button type="submit" class="btn-basket" onclick="saveSessionStorage();  window.open('/basketPop', '_blank', 'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px'); return false;">장바구</button>
+                    <a href="/basketPop" value="저장" onClick="saveSessionStorage(); window.open(this.href, '_blank', 'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px'); return false;">저장</a>
                     <button type="submit" class="btn-buy-now">바로구</button>
                 </form>
             </div>
         </div>
+        <script >
+            var i = 0;
+            //var arrValue = new Array();
+            var goSession;
+            var sessionCheck = sessionStorage.getItem("ProductNameSession");
+            if (sessionCheck != null) {
+                var stored = JSON.parse(sessionCheck);
+                console.log("stroed : " + stored + "stored[1] = " + stored[1]);
+            } else {
+                console.log("stored 없음");
+            }
+            console.log("sessionCheck : " + sessionCheck + "getItem" + sessionStorage.getItem(sessionStorage.key(1)));
+            /*if (sessionCheck == null) {
+                console.log("sessionCheck is null");
+            } else {
+                console.log(" 길이 : " + sessionStorage.getItem(sessionStorage.key(1)).length);
+            }*/
+            //sessionStorage.key(1)
+            var a;
 
+            //이건 인덱스로 가져와야 되는데 key 값을 어떻게 가져올까
+            //console.log("키 확인 : "+ sessionStorage.key(1));
+            //console.log("값 확인 : "+ sessionCheck[2]);
+            //console.log("값 길이 확인 : " + sessionCheck.length);
+
+            //세션 값의 빈자리에 저장시켜야되는데 길이가 다른값 포함된 길이로 잡힘
+            //값이 있는 자리만 추출하려 했는데 함수가 없는듯
+
+            // 세션 받아와서  값 추가한 뒤  다시 세션에 저장
+            var valList;
+            var getHoho;
+            if (sessionCheck == null) {
+                valList = new Array();
+                a = 0;
+            } else {
+                a = stored.length;
+                console.log("stored Len : " + a);
+                /* valList = sessionCheck;
+                 a=valList.length;
+                 console.log("a : " + a);*/
+            }
+            var key;
+
+            function saveSessionStorage() {
+                console.log("saveSessionStorage 실행");
+                // 변수를 선언한다.
+                var key = document.getElementById("productName").value;
+                var value = document.getElementById("productNo").value;
+                console.log("value  :  "+value);
+                if (sessionCheck == null) {
+                    console.log("sessionCheck is null");
+                    while (true) {
+                        console.log(a + "번째");
+                        if (valList[a] == null) {
+                            console.log("확인 : " + valList);
+                            valList[a] = value;
+                            console.log("varList" + a + "번째 : " + valList[a]);
+                            break;
+                        }
+                        a++;
+                    }
+                    sessionStorage.setItem("ProductNameSession", JSON.stringify(valList));
+                } else {
+                    a=0;
+                    console.log("sessionCheck is  not null");
+                    while (true) {
+                        console.log("stored[a] : " + stored[a]);
+                        console.log("value : " + value);
+                        if(stored[a] == value){
+                            alert("이미 저장돼있습니다");
+                            break;
+                        }
+                        if (stored[a] == null) {
+                            console.log("stored" + a + " is Null");
+                            stored[a] = value;
+                            console.log("append 한 값은 : " + stored);
+                            break;
+                        } else {
+                            console.log("stored" + a + " is Not Null");
+                        }
+                        a++;
+                    }
+                    sessionStorage.setItem("ProductNameSession", JSON.stringify(stored));
+                }
+
+
+                // setItem( ) 메서드를 이용하여 key를 지정하고, value값을 세션에 저장한다.
+               // sessionStorage.setItem(key, value);
+                //console.log("@@@@@@@@@@@@@@@ valList : "+valList);
+                printSessionStorage();
+
+            }
+
+            //고쳐야함
+
+
+            document.addEventListener("DOMContentLoaded", function () {
+                if (window.sessionStorage) {
+
+                    console.log("sessionStorage가 있음");
+                    //sessionStorage.clear();
+                } else {
+                    alert("세션을 사용할 수 없는 브라우저입니다.");
+                }
+
+            });
+
+            function printSessionStorage() {
+                console.log("printSessionStorage 실행");
+                var i = 0;
+                //console.log("len : " + len);
+                // 값이 있는 주소만 가져오기
+
+
+                //console.log(arrValue);
+                // console.log(arrValue[0]);
+                /*for (var i = 0; i < sessionStorage.length; i++) {
+                    var keyTest = window.sessionStorage;
+                    arrValue[i] = JSON.stringify(sessionStorage.getItem(keyTest));
+                    //    console.log(keyTest);
+                    //   console.log(window.sessionStorage.length);        }
+                    //console.log("keyTest : " + keyTest);
+                    //console.log("Json:"+JSON.stringify(sessionStorage.getItem(keyTest)));
+
+                }*/
+                /*var form = {
+                    value : 1,
+                    hoho : arrValue
+                }*/
+                //console.log(" hoho 0: " +form.hoho[0]);
+                //console.log(" hoho 1 : " +form.hoho[1]);
+                //console.log("form : " +form.hoho[2]);
+                //jQuery.ajaxSettings.traditional = true;
+                goSession = sessionStorage.getItem("ProductNameSession")
+                console.log("goSession" + goSession);
+                $.ajax({ // 세션 보내기 ajax
+                    //console.log("hi");
+                    url: "/basketSession",
+                    type: "POST",
+                    traditional: true,
+                    data: {'hoho': goSession}
+                    ,
+                    success: function (e) {
+                        var result = e.result
+                        console.log("success");
+                        //console.log(hoho3);
+                        console.log(e);
+                        alert("ajax완료")
+
+                    },
+                    error: function () {
+                        alert("test err");
+                    }
+                });
+            }
+
+        </script>
     </div>
 
     <div th:class="container-product_2">
@@ -123,6 +285,8 @@
             </div>
         </div>
     </div>
+
 </div>
+
 </body>
 </html>
