--- a/src/main/resources/templates/th/main/productDetailsLJH.html
+++ b/src/main/resources/templates/th/main/productDetailsLJH.html
@@ -197,7 +197,7 @@
                 //console.log(hoho3);
                 console.log(e);
                 alert("ajax완료")
-                location.href = "/productDetails";
+                location.href = "/productDetailsLJH";
             },
             error: function () {
                 alert("test err");
