--- a/src/main/resources/templates/th/member/payment/kakaoPaySuccess.html
+++ b/src/main/resources/templates/th/member/payment/kakaoPaySuccess.html
@@ -10,10 +10,10 @@
 haha
 <!--<sapn th:text ="${house.userId}"></sapn>-->
 
-결제일시: <sapn th:text ="${kakaoInfo.approved_at}"></sapn>
+<!--결제일시: <sapn th:text ="${kakaoInfo.approved_at}"></sapn>-->
 <!-- 주문번호: <sapn th:text ="${kakaoInfo.partner_order_id}"></sapn>
- -->상품명: <span th:text = "${kakaoInfo.item_name}"></span>
-상품수량: <span th:text = "${kakaoInfo.quantity}"></span>
+ --><!--상품명: <span th:text = "${kakaoInfo.item_name}"></span>
+상품수량: <span th:text = "${kakaoInfo.quantity}"></span>-->
 <!-- 결제금액: <span th:text = "${kakaoInfo.amount.total}"></span> -->
 <!-- 결제방법: <sapn th:text = "${kakaoInfo.payment_method_type}"></sapn> -->
 </body>
