--- a/src/main/resources/templates/th/member/basket/basket.html
+++ b/src/main/resources/templates/th/member/basket/basket.html
@@ -128,9 +128,8 @@
                                                                                 <div class="selling-option-item__quantity">
                                                                                     <div class="input-group select-input option-count-input">
                                                                                         <select class="form-control">
-                                                                                            <option selected=""
-                                                                                                    value="0">1
-                                                                                            </option>
+
+                                                                                            <option value="0">1</option>
                                                                                             <option value="1">2</option>
                                                                                             <option value="2">3</option>
                                                                                             <option value="3">4</option>
@@ -139,7 +138,9 @@
                                                                                             <option value="6">7</option>
                                                                                             <option value="7">8</option>
                                                                                             <option value="8">9</option>
-                                                                                            <option value="9">10+
+                                                                                            <option value="9">10
+
+                                                                                            <option value="11" selected="">이히</option>
                                                                                             </option>
                                                                                         </select><span
                                                                                             class="select-input__icon"><svg
