--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -101,7 +101,7 @@
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/signup}">
                                 <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">회원가입</button>
                             </form>
-                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/mypage}">
+                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/user}">
                                 <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>
                             </form>
 <!--                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">-->
