--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <div th:class="container-product">
+    <div th:class="container product">
         <div th:class="row">
             <div th:class="col-md-4">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
@@ -33,9 +33,6 @@
                         </div>
                         <div class="carousel-item">
                             <img th:src="@{'/uploadImg/'+${product.productSubImg3}}" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img th:src="@{'/uploadImg/'+${product.productSubImg4}}" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -58,16 +55,16 @@
                               th:text="${product.productName}"></span>
                     </h1>
                     <h4><span class="production-selling-header__price__original"
-                              th:text="${product.customerPrice}"></span></h4>
-                    <h4><span class="production-selling-header__price__customer"
                               th:text="${product.sellPrice}"></span></h4>
+                    <h4><span class="production-selling-header__price__customer"
+                              th:text="${product.customerPrice}"></span></h4>
                     <h4><span class="production-selling-header__price__purchase"
                               th:text="${product.purchasePrice}"></span></h4>
                 </div>
-                <form action="" method="post" th:object="${basketVO}" >
+                <form action="" method="post" th:object="${basketVO}">
                     <div class="input-group">
                         <select th:field="*{productColor}" class="custom-select col-md-7" id="inputGroupSelect01">
-                            <option th:value selected>색상</option>
+                            <option th:value selected disabled>색상</option>
                             <option th:each="color : ${product.colorCodeVOList}"
                                     th:value="${color}"
                                     th:utext="${color}"/>
@@ -76,53 +73,59 @@
                     <div>
                         <label>수량</label><input th:type="text" th:class="input-qty"/>
                     </div>
-                    <button type="submit" class="btn-basket">장바구</button>
-                    <button type="submit" class="btn-buy-now">바로구</button>
+                    <button type="submit" class="btn-basket">장바구니</button>
+                    <button type="submit" class="btn-buy-now">바로구매</button>
                 </form>
             </div>
         </div>
 
-    </div>
 
-    <div th:class="container-product_2">
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
-                <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">상품정보</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">리뷰</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">업체정보</a>
-            </li>
-        </ul>
-        <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"><img th:src="@{'/uploadImg/'+${product.productExpImg}}" class="d-block w-100" alt="..."></div>
-            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"></div>
-            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-                <table class="table table-sm">
-                    <tbody>
-                    <tr>
-                        <th scope="row">업체이름:</th>
-                        <td th:text=""></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">업체관리자전화번호:</th>
-                        <td th:text=""></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">업체관리자이메일:</th>
-                        <td ></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">주소:</th>
-                        <td></td>
-                    </tr>
-                    </tbody>
-                </table>
+        <div th:class="container-product_2">
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
+                       aria-controls="pills-home" aria-selected="true">상품정보</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
+                       aria-controls="pills-profile" aria-selected="false">리뷰</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab"
+                       aria-controls="pills-contact" aria-selected="false">업체정보</a>
+                </li>
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                    <img th:src="@{'/uploadImg/'+${product.productExpImg}}" class="d-block w-100" alt="..."></div>
+                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"></div>
+                <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+                    <table class="table table-sm">
+                        <tbody>
+                        <tr>
+                            <th scope="row">업체이름:</th>
+                            <td th:text="${seller.sellerName}"></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">업체관리자전화번호:</th>
+                            <td th:text="${seller.managerTel}"></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">업체관리자이메일:</th>
+                            <td th:text="${seller.managerEmail}"></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">주소:</th>
+                            <td th:text="${seller.sellerAddr}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
 </body>
 </html>
