--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <div th:class="container product">
+    <div th:class="container">
         <div th:class="row">
             <div th:class="col-md-4">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
