0622 프로필보기 뷰랑 컨트롤러 수정. 질문게시판 /askBoardList로 수정. header에서도 수정함.

--- a/src/main/resources/templates/th/askBoard/askBoardList.html
+++ b/src/main/resources/templates/th/askBoard/askBoardList.html
@@ -19,9 +19,8 @@
         </tr>
 
         <th:block th:each="board : ${list}">
-            <tr>
-                <td th:onclick="'location.href=\''+@{/askdetail/{askBoardno}(askBoardno=${board.askBoardno})}+'\''"
-                    th:text="${board.askBoardno}"/>
+            <tr th:onclick="'location.href=\''+@{/askdetail/{askBoardno}(askBoardno=${board.askBoardno})}+'\''">
+                <td th:text="${board.askBoardno}"/>
                 <td>
                     <th:block th:text="${board.askTitle}"/>
                 </td>
