--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -26,7 +26,7 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" th:href="@{/communityMain}">커뮤니티홈</a>
-                                    <a class="dropdown-item" th:href="@{/askList}">질문</a>
+                                    <a class="dropdown-item" th:href="@{/askBoardList}">질문</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
