--- a/src/main/resources/templates/th/member/mypage/profile/receiveNote.html
+++ b/src/main/resources/templates/th/member/mypage/profile/receiveNote.html
@@ -5,24 +5,17 @@
     <title>보낸 쪽지함</title>
 
     <script src="https://code.jquery.com/jquery-latest.js"></script>
-
-    <script>
-        $(function(){ //체크박스 전체선택
-            $("#allcheck").click(function(){
-                var chk = $(this).is(":checked");//.attr('checked');
-                if(chk) $(".select_note input").prop('checked', true);
-                else $(".select_note input").prop('checked', false);
-            });
-        });
-    </script>
+    <script type="text/javascript" th:src="@{/js/profile.js}"></script>
 </head>
 <body>
 
 <h2>보낸 쪽지함</h2>
 
 <div class="container">
-    <input type="button" id="sendingNote" name="sendingNote" value="쪽지보내기">
-    <input type="button" id="deleteNote" name="deleteNote" value="삭제">
+    <form action="/noteSending" method="post" id="sending" name="sending">
+
+    <input type="button" id="send" name="send" value="쪽지보내기">
+    <input type="button" id="delete" name="delete" value="삭제">
 
     <table class="table table-hover">
         <tr>
@@ -34,15 +27,16 @@
         <th:block th:each="receive : ${receiveNote}">
             <tr>
                 <td class="select_note">
-                    <input type="checkbox" name="check" id="check" class="check" th:data-No="${receive.msgNo}"/>
+                    <input type="checkbox" name="check" id="check" class="check" th:data-No="${receive.msgNo}"
+                    th:data-sendId="${receive.receiveId}"/>
                 </td>
                 <td th:onclick="'javascript: '" th:text="${receive.msgContents}"/><!-- onclick ajax로 연결 --></td>
                 <td th:text="${receive.receiveId}"/>
             </tr>
         </th:block>
     </table>
+        <input type="hidden" id="receiveId" name="receiveId" value=""/>
+    </form>
 </div>
-
-
 </body>
 </html>
