--- a/src/main/resources/templates/th/member/mypage/profile/myBoard.html
+++ b/src/main/resources/templates/th/member/mypage/profile/myBoard.html
@@ -5,53 +5,42 @@
     <title>내 프로필</title>
 </head>
 <body>
-
 <div class="container">
     <div class="form-group">
-            <img th:src=@{'/uploadImg'+${profile.memberImg}}" style="width: 300px; height: 300px;"/>
+        <img th:src="@{'/uploadImg'+${mprofile.memberImg}}" style="width: 300px; height: 300px;"/>
     </div>
     <div class="form-group">
-            <th:block th:text="${profile.memberId}"/>
+            <th:block th:text="${mprofile.memberId}"/>
     </div>
     <div class="form-group">
             <p>팔로워<th:block th:text="${followCount}"></th:block>
                 팔로잉<th:block th:text="${followingCount}"></th:block></p>
     </div>
     <div class="form-group">
-        <input type="button" id="follow" name="follow" value=""/>
-        <input type="button" id="notesend" name="notesend" value="쪽지보내기">
-    </div>
-    <div class="form-group">
-        <th:block th:text="${profile.memberIntro}"/>
+        <th:block th:text="${mprofile.memberIntro}"/>
     </div>
 </div>
-
 <div class="container">
     <div class="form-group">
-    <h3>사진</h3><th:block th:text="${photoCount}"/>
+    <h3>사진<th:block th:text="${photoCount}"/></h3>
     </div>
     <div class="form-group">
-        <th:block th:each="myphoto : ${mphoto}">
+        <th:block th:each="mphoto : ${myphoto}">
         <tr th:onclick="" ><!-- photodetail로 이동-->
-        <td th:text="${myphoto.photoImg1}"/>
+        <td th:text="${mphoto.photoImg1}"/>
         </tr>
         </th:block>
     </div>
     <div class="form-group">
-        <h3>스크랩</h3><th:block th:text="${scrapCount}"/>
+        <h3>스크랩<th:block th:text="${scrapCount}"/></h3>
     </div>
     <div class="form-group">
-        <th:block th:each="myscrap : ${mscrap}">
+        <th:block th:each="mscrap : ${myscrap}">
             <tr th:onclick=""><!-- photodetail로 이동-->
-            <td th:text="${myscrap.photoImg1}"/>
+            <td th:text="${mscrap.photoImg1}"/>
             </tr>
         </th:block>
     </div>
-
 </div>
-
-
-
-
 </body>
 </html>
